<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QueryCommodity</class>
 <widget class="QDialog" name="QueryCommodity">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>576</width>
    <height>396</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>商品查询</string>
  </property>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>571</width>
     <height>391</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QComboBox" name="choice">
        <item>
         <property name="text">
          <string>请选择查询方式</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>编号</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>名称</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>分类</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>用途</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>库存量</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>仓库所在地</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>仓库编号</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="inputInformation">
        <property name="placeholderText">
         <string>请输入查询内容</string>
        </property>
        <property name="clearButtonEnabled">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="searchButton">
        <property name="text">
         <string>查询</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QTableView" name="tableViewInformation"/>
    </item>
   </layout>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
